# gemini-workshop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TRANSCRIPTION_LIMITS.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
app/: config.py  exceptions.py
app/routers/: websocket.py
app/services/: gemini_live.py
static/: index.html
tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_main.py
tests/routers/: __init__.py  test_websocket.py
tests/services/: test_gemini_live.py
